--- a/experience.html
+++ b/experience.html
@@ -48,7 +48,7 @@
         <ul>
             <li class="d-flex mb-15">
                 <div class="img img-1"></div>
-                <div class="content br primary p-8 bg-white d-flex column jcc">
+                <div class="content br primary p-8 bg-third d-flex column jcc">
                     <div class="title d-flex column aic">
                         <h3 class="event-name fwb fz-l tac">中國電器股份有限公司 X UCSR組員</h3>
                         <div class="border-line mt-1"></div>
@@ -60,7 +60,7 @@
             
             <li class="d-flex row-reverse mb-15">
                 <div class="img img-2"></div>
-                <div class="content br-2 primary p-8 bg-white d-flex column jcc">
+                <div class="content br-2 primary p-8 bg-third d-flex column jcc">
                     <div class="title d-flex column aic">
                         <h3 class="event-name fwb fz-l tac">中堅企業CSR論壇活動PM</h3>
                         <div class="border-line mt-1"></div>
@@ -72,7 +72,7 @@
 
             <li class="d-flex mb-15">
                 <div class="img img-3"></div>
-                <div class="content br primary p-8 bg-white d-flex column jcc">
+                <div class="content br primary p-8 bg-third d-flex column jcc">
                     <div class="title d-flex column aic">
                         <h3 class="event-name fwb fz-l tac">輔大中文系第22屆詩詞吟唱比賽 總召</h3>
                         <div class="border-line mt-1"></div>
@@ -84,7 +84,7 @@
 
             <li class="d-flex row-reverse ">
                 <div class="img img-4"></div>
-                <div class="content br-2 primary p-8 bg-white d-flex column jcc">
+                <div class="content br-2 primary p-8 bg-third d-flex column jcc">
                     <div class="title d-flex column aic">
                         <h3 class="event-name fwb fz-l tac">好故事電影編劇人才培訓工作坊 學員</h3>
                         <div class="border-line mt-1"></div>
@@ -95,9 +95,9 @@
             </li>
         </ul>
         <div class="bg-second">
-            <div class="conclusion">
-                <p class="primary tac fwb">你要舉動一塊巨石，不用力大無窮，而是要找要它的支點。</p>
-                <p class="primary tac fwb">願我以編劇的三種力，成為你們的支點。</p>
+            <div class="conclusion white">
+                <p class="tac fwb">你要舉動一塊巨石，不用力大無窮，而是要找要它的支點。</p>
+                <p class="tac fwb">願我以編劇的三種力，成為你們的支點。</p>
             </div>
             <div class="tape"></div>
         </div>
