--- a/index.html
+++ b/index.html
@@ -42,48 +42,48 @@
     <!-- main -->
     <div class="index">
         <div class="banner">
-            <h2 class="pcb-slogan fwb tac fz-xl">誰能用更少的力達到目標？</h2>
-            <img src="img/banner-很多馬.jpg" alt="banner" class="d-block">
+            <!-- <h2 class="pcb-slogan fwb tac fz-xl">誰能用更少的力達到目標？</h2> -->
+            <img src="img/dcard-google.jpg" alt="banner" class="d-block">
         </div>
 
         <div class="slogan bg-primary">
-            <h2 class="b-slogan fwb tac second">你常常花了大力氣想要做的更好，卻賠了夫人又折兵嗎？</h2>
+            <h2 class="b-slogan fwb tac second">Lorem ipsum icing elit. Ipsum explicabo asperiorapieatus.</h2>
             <div class="dialog-bottom">
-                <h2 class="block1 fwb tac primary">如果有種方法，能讓你在等待技術力提升的同時，也能有顯著的改變</h2>
+                <h2 class="block1 fwb tac primary"> icing elit. Ipsum explicabo asperio</h2>
             </div>
             <div class="dialog-bottom">
-                <h2 class="block2 fwb tac primary">而且這種方法，只要你在劇本上簡單的變動，那該有多好？</h2>
+                <h2 class="block2 fwb tac primary"> icing elit. Ipsum explicabo asperio</h2>
             </div>
             <div class="mob">
-                <h2 class="block1 fwb tac primary d-none">如果有種方法，能讓你在等待技術力提升的同時，也能有顯著的改變</h2>
-                <h2 class="block2 fwb tac primary d-none">而且這種方法，只要你在劇本上簡單的變動，那該有多好？</h2>
+                <h2 class="block1 fwb tac primary d-none"> icing elit. Ipsum explicabo asperio</h2>
+                <h2 class="block2 fwb tac primary d-none"> icing elit. Ipsum explicabo asperio</h2>
             </div>
         </div>
 
         <div class="bg-note">
-            <h2 class="tac fwb primary">你需要擁有 3 種力的編劇</h2>
-            <h2 class="tac fwb primary">讓你產生微小的大改變</h2>
+            <h2 class="tac fwb primary"> elit. Ipsum expli</h2>
+            <h2 class="tac fwb primary"> elit. Ipsum expli</h2>
             <ul class="weapon m0-a d-flex jcsb">
                 <li>
                     <div class="img-1"></div>
-                    <h3 class="title-tape bg-second p-4 tac primary fwb fz-l">衝突力</h3>
-                    <p class="primary fz-m bg-white p-5">劇情要吸引人，就要懂得運用衝突。我有注意力缺乏的症狀，對於無聊的事物特別敏感。所以在創作中，擅長利用有趣的組合、找出衝突。利用這樣的技法，在中華電影製片協會，十多位編劇學員的提案中，拿下第一成為該年主筆。</p>
+                    <h3 class="title-tape bg-primary p-4 tac white fwb fz-l">衝突力</h3>
+                    <p class="primary fz-m bg-third p-5">劇情要吸引人，就要懂得運用衝突。我有注意力缺乏的症狀，對於無聊的事物特別敏感。所以在創作中，擅長利用有趣的組合、找出衝突。利用這樣的技法，在中華電影製片協會，十多位編劇學員的提案中，拿下第一成為該年主筆。</p>
                 </li>
                 <li>
                     <div class="img-2"></div>
-                    <h3 class="title-tape bg-second p-4 tac primary fwb fz-l">情感張力</h3>
-                    <p class="primary fz-m bg-white p-5">情節要動人，不是寫出坎坷、別離。而是寫出真實。我兩個主修都是人文科系、且自己對於心理學、腦神經科學另有些涉略。這都有助我寫出活生生的「人」，從而使作品情感深刻。</p>
+                    <h3 class="title-tape bg-primary p-4 tac white fwb fz-l">情感張力</h3>
+                    <p class="primary fz-m bg-third white p-5">情節要動人，不是寫出坎坷、別離。而是寫出真實。我兩個主修都是人文科系、且自己對於心理學、腦神經科學另有些涉略。這都有助我寫出活生生的「人」，從而使作品情感深刻。</p>
                 </li>
                 <li>
                     <div class="img-3"></div>
-                    <h3 class="title-tape bg-second p-4 tac primary fwb fz-l">節奏力</h3>
-                    <p class="primary fz-m bg-white p-5">電影跟音樂之所以迷人，是因為有時間限制。每分鐘都十分珍貴，所以更要合理安排節奏。作為數年的電影學習者，對節奏的掌握已是條件反射。相信把它融合到遊戲之中，會使得作品更緊湊、讓人更沈迷。</p>
+                    <h3 class="title-tape bg-primary p-4 tac white fwb fz-l">節奏力</h3>
+                    <p class="primary fz-m bg-third p-5">電影跟音樂之所以迷人，是因為有時間限制。每分鐘都十分珍貴，所以更要合理安排節奏。作為數年的電影學習者，對節奏的掌握已是條件反射。相信把它融合到遊戲之中，會使得作品更緊湊、讓人更沈迷。</p>
                 </li>
             </ul>
             <div class="tape"></div>
         </div>
 
-        <div class="self-intro d-flex jcsb">
+        <div class="self-intro d-flex jcsb bg-third">
             <div class="pc-img">
                 <img src="img/self-2.JPG" alt="" class="img-1">
                 <img src="img/self-1.JPG" alt="" class="img-2">
@@ -97,8 +97,8 @@
                     <div class="border-line mt-2 mb-5 tac"></div>
                 </div>
                 <ul>
-                    <li class="mb-5"><span class="fwb dcard-blue">生日&nbsp;<i class="fas fa-calendar-day"></i> - </span>1997/09/16</li>
-                    <li class="mb-5"><span class="fwb dcard-blue">學歷&nbsp;<i class="fas fa-user-graduate"></i> - </span>天主教輔仁大學
+                    <li class="mb-5"><span class="fwb black">生日&nbsp;<i class="fas fa-calendar-day"></i> - </span>1997/09/16</li>
+                    <li class="mb-5"><span class="fwb black">學歷&nbsp;<i class="fas fa-user-graduate"></i> - </span>天主教輔仁大學
                         <ul>
                             <li class="mt-1 mb-1">主修&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;中文系</li>
                             <li class="mb-1">雙主修&nbsp;&nbsp;&nbsp;&nbsp;哲學系</li>
@@ -106,11 +106,11 @@
                             <li class="mb-1">學程&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;體感互動學分學程</li>
                         </ul>
                     </li>
-                    <li class="mb-5"><span class="fwb dcard-blue">語言&nbsp;<i class="fas fa-language"></i> - </span>國語、粵語、英語</li>
-                    <li class="mob-hobby mb-5"><span class="fwb dcard-blue">嗜好&nbsp;<i class="fas fa-book-open"></i> - </span>腦科學、心理學、九型人格、電影、服飾、妝髮、唱歌</li>
-                    <li class="mb-5"><span class="fwb dcard-blue">電話&nbsp;<i class="fas fa-phone-alt"></i> - </span><a href="tel:0928389160" class="d-inline-block primary">0928389160</a></li>
-                    <li class="mb-5"><span class="fwb dcard-blue">電郵&nbsp;<i class="fas fa-envelope-open"></i> - </span><a href="mailto:jeremiah.302916@gmail.com" class="d-inline-block primary">jeremiah.302916@gmail.com</a></li>
-                    <li><span class="dcard-blue">社群&nbsp;<i class="fas fa-address-book"></i> - </span><a href="https://line.me/ti/p/VagCNWpd8d"><i class="line fab fa-line ml-2 mr-5 primary" style="font-size: 45px;"></i></a><a href="https://www.facebook.com/jeremiah.chan.718"><i class="fb fab fa-facebook-square primary" style="font-size: 45px;"></i></a></li>
+                    <li class="mb-5"><span class="fwb black">語言&nbsp;<i class="fas fa-language"></i> - </span>國語、粵語、英語</li>
+                    <li class="mob-hobby mb-5"><span class="fwb black">嗜好&nbsp;<i class="fas fa-book-open"></i> - </span>腦科學、心理學、九型人格、電影、服飾、妝髮、唱歌</li>
+                    <li class="mb-5"><span class="fwb black">電話&nbsp;<i class="fas fa-phone-alt"></i> - </span><a href="tel:0928389160" class="d-inline-block primary">0928389160</a></li>
+                    <li class="mb-5"><span class="fwb black">電郵&nbsp;<i class="fas fa-envelope-open"></i> - </span><a href="mailto:jeremiah.302916@gmail.com" class="d-inline-block primary">jeremiah.302916@gmail.com</a></li>
+                    <li><span class="black">社群&nbsp;<i class="fas fa-address-book"></i> - </span><a href="https://line.me/ti/p/VagCNWpd8d"><i class="line fab fa-line ml-2 mr-5 primary" style="font-size: 45px;"></i></a><a href="https://www.facebook.com/jeremiah.chan.718"><i class="fb fab fa-facebook-square primary" style="font-size: 45px;"></i></a></li>
                 </ul>
             </div>
         </div>
