--- a/script.html
+++ b/script.html
@@ -21,11 +21,11 @@
     <div class="header">
         <div class="container pl-5">
             <ul class="pcNavbar d-flex jcsb fwb">
-                <li><a href="index.html" class="menu mr-2 ml-2 p-4 d-block white">關於我</a></li>
-                <li><a href="script.html" class="menu mr-2 ml-2 p-4 d-block white">劇本/點評</a></li>
-                <li><a href="index.html" class="logo mr-2 ml-2 p-4 d-block white fwn"><h1>Jeremiah Chan</h1></a></li>
-                <li><a href="video.html" class="menu mr-2 ml-2 p-4 d-block white">影視作品</a></li>
-                <li><a href="experience.html" class="menu mr-2 ml-2 p-4 d-block white">其他經歷</a></li>
+                <li><a href="index.html" class="menu mr-2 ml-2 p-4 d-block third">關於我</a></li>
+                <li><a href="script.html" class="menu mr-2 ml-2 p-4 d-block third">劇本/點評</a></li>
+                <li><a href="index.html" class="logo mr-2 ml-2 p-4 d-block third fwn"><h1>Jeremiah Chan</h1></a></li>
+                <li><a href="video.html" class="menu mr-2 ml-2 p-4 d-block third">影視作品</a></li>
+                <li><a href="experience.html" class="menu mr-2 ml-2 p-4 d-block third">其他經歷</a></li>
             </ul>
             <ul class="mobileNavbar fwb tac">
                 <li><a href="index.html" class="p-4 d-block">關於我</a></li>
@@ -54,7 +54,7 @@
                         <h4 class="fz-s mt-2">執導作品《老莫的第二個春天》</h4>
                         <a href="https://zh.wikipedia.org/wiki/%E6%9D%8E%E7%A5%90%E5%AF%A7"><h3 class="fz-l fwb primary mt-2">李祐寧 導演</h3></a>
                     </div>
-                    <p class="content p-4 bg-primary white">《偷光》專業中充滿了感情，汶豪對作品有很深入的思考過，偷光的體裁＂人物張力、故事衝突＂兼容。使人一想就能想到。</p>
+                    <p class="content p-4 bg-third primary">《偷光》專業中充滿了感情，汶豪對作品有很深入的思考過，偷光的體裁＂人物張力、故事衝突＂兼容。使人一想就能想到。</p>
                 </li>
 
                 <li class="mb-15 d-flex jcsb row-reverse">
@@ -65,7 +65,7 @@
                         <h4 class="fz-s mt-1">目前正籌備 - TSFF 台灣永續影展</h4>
                         <h3 class="fz-l fwb primary mt-2">黃楚淵</h3>
                     </div>
-                    <p class="content p-4 bg-white primary">
+                    <p class="content p-4 bg-third primary">
                         好的編劇必須具備：共同創作的心態、能夠承受諸多壓力的韌性與毅力，而汶豪正是有著這樣特質的編劇。<br>
                         《偷光》修改了八個版本，儘管仍有進步空間。汶豪始終沒有放棄或失去創作的熱誠。<br>
                         身為編劇，我們是工匠，藉由熱情與耐心，探索故事背後的真諦，並將它轉化成人人皆可接觸的藝術。<br>
@@ -80,7 +80,7 @@
                         <h4 class="fz-s mt-2">曾任 輔仁大學影像創作社 社長</h4>
                         <h3 class="fz-l fwb primary mt-2">陳嘉蔚</h3>
                     </div>
-                    <p class="content p-4 bg-primary white">作品議題常探討家庭傷痛帶來的影響，角色間彼此互相成就昇華，整體風格是一種遠觀欣賞的藝術感，結尾不會定死，留餘韻給觀眾想像與體會。<br>
+                    <p class="content p-4 bg-third primary">作品議題常探討家庭傷痛帶來的影響，角色間彼此互相成就昇華，整體風格是一種遠觀欣賞的藝術感，結尾不會定死，留餘韻給觀眾想像與體會。<br>
                         汶豪對作品品質、角色昇華有自己的堅持，是個認真且有抱負、有夢想的編劇！</p>
                 </li>
     
@@ -91,7 +91,7 @@
                         <h4 class="fz-s">影音創作與數位媒體產業碩士</h4>
                         <h3 class="fz-l fwb primary mt-2">邱輔宣</h3>
                     </div>
-                    <p class="content p-4 bg-white primary">
+                    <p class="content p-4 bg-third primary">
                         汶豪在編劇寫作上，有著明確的脈絡，場次之間總能規劃得宜，讓整齣戲有著精彩的起伏；在創作發想上，總是能加入一些令人深刻的細節與文化底蘊的象徵，讓故事增添一些細節與意涵；而筆下的人物總是帶有豐富的情感，不管是角色的背景還是性格，即便配角，都是擁有豐富刻畫的原型人物。<br>
                         與汶豪在編劇上的合作，總是能友好配合，在意見矛盾時，汶豪總是能退一步反向思考，給予中肯的建議，合作上為人和善並且知變通，是一位認真努力的創作者。
                     </p>
@@ -105,15 +105,15 @@
                         <h4 class="fz-s mt-1">曾任《一百年很⻑嗎》執行導演</h4>
                         <h3 class="fz-l fwb primary mt-2">蕭以涵</h3>
                     </div>
-                    <p class="content p-4 bg-primary white">汶豪在同儕間充分展示了他對於創作的熱愛。我在和他共事的過程中，發現他心思細膩，並且有著十足的行動力。<br>
+                    <p class="content p-4 bg-third primary">汶豪在同儕間充分展示了他對於創作的熱愛。我在和他共事的過程中，發現他心思細膩，並且有著十足的行動力。<br>
                         汶豪的創意無限，我想他未來在遊戲故事的創作上，對貴公司一定有很大的幫助。</p>
                 </li>
             </ul>
         </div>
-        <div class="bg-dcard">
+        <div class="bg-second">
             <div class="logline m0-a">
                 <div class="title d-flex column aic">
-                    <h2 class="fz-xl tac white">Logline</h2>
+                    <h2 class="fz-xl tac third">Logline</h2>
                     <div class="border-line mt-2 mb-15"></div>
                 </div>
                 <ul class="d-flex jcsb">
@@ -122,7 +122,7 @@
                         <div class="content p-5 d-flex column jcsb bg-white">
                             <h3>一個闖空門的小偷，碰到一個自殺女生的故事。</h3>
                             <div>
-                                <h4 class="fwb fz-m primary mb-3">——《偷光》後來改寫成《The Silent Beast》</h4>
+                                <h4 class="fwb fz-m dcard-blue mb-3">——《偷光》後來改寫成《The Silent Beast》</h4>
                                 <a href="https://drive.google.com/file/d/1fvRfAKSkMRycIYozcEH2VHshqnU2N-q-/view?usp=sharing" target="_blank" class="d-block p-2 tac white">劇本&nbsp;&nbsp;<i class="fas fa-arrow-right" style="font-size: 18px;"></i></a>
                             </div>
                         </div>
@@ -132,7 +132,7 @@
                         <div class="content p-5 d-flex column jcsb bg-white">
                             <h3>為了在無良射擊攤上獲勝，青年把子彈射向老闆的故事。</h3>
                             <div>
-                                <h4 class="fwb fz-m primary mb-3">——《The Last Shot》</h4> 
+                                <h4 class="fwb fz-m dcard-blue mb-3">——《The Last Shot》</h4> 
                                 <a href="https://drive.google.com/file/d/1oXioNCUtfiW1Yj7iJ3E8q9_NwYd_IsWr/view?usp=sharing" target="_blank" class="d-block p-2 tac white">劇本&nbsp;&nbsp;<i class="fas fa-arrow-right" style="font-size: 18px;"></i></a>
                             </div>
                         </div>
@@ -142,7 +142,7 @@
                         <div class="content p-5 d-flex column jcsb bg-white">
                             <h3>一個會偷拍客人的旅館經理，某天愛女也被同樣對待後，反省並對抗這種惡行的故事。</h3>
                             <div>
-                                <h4 class="fwb fz-m primary mb-3">——《回》</h4>
+                                <h4 class="fwb fz-m dcard-blue mb-3">——《回》</h4>
                                 <a href="https://drive.google.com/file/d/1vlA-8rARHkyuzvUjZlPVNMv_gcx6WPQM/view?usp=sharing" target="_blank" class="d-block p-2 tac white">劇本&nbsp;&nbsp;<i class="fas fa-arrow-right" style="font-size: 18px;"></i></a>
                             </div>
                         </div>
@@ -156,7 +156,7 @@
     <a href="#" class="backToTop"><img src="img/icon.svg" alt="backtotop"></a>
 
     <div class="bg-footer">
-        <ul class="footer m0-a p-footer tac white">
+        <ul class="footer m0-a p-footer tac third">
             <li class="mb-5">TEL: <a href="tel:0928389160" class="white">0928389160</a></li>
             <li>EMAIL: <a href="mailto:jeremiah.302916@gmail.com" class="white">jeremiah.302916@gmail.com</a></li>
         </ul>
