--- a/experience.html
+++ b/experience.html
@@ -97,7 +97,7 @@
         </ul>
         <div class="bg-pic">
             <div class="conclusion white">
-                <p class="tac fwb">讓我們建立一個 dtto 宇宙吧！</p>
+                <h2 class="tac fwb">讓我們一起建立 dtto friends 宇宙吧</h2>
             </div>
         </div>
     </div>
