index universe img

--- a/index.html
+++ b/index.html
@@ -94,13 +94,9 @@
             <div class="tape"></div>
         </div>
        
-        <div class="bg-primary">
-            <div class="index-con">
-                <h2 class="pcb-slogan fwb tac white">所以你其實需要的是一個 dcard 專屬的宇宙打造者</h2>
-                <h2 class="pcb-slogan fwb tac white">（這邊估計會再做一張圖）</h2>
-            </div>
+        <div class="bg-pic">
+            <h2 class="index-con pcb-slogan fwb tac white">所以你其實需要的是一個 <span class="dcard-blue"><img src="https://upload.wikimedia.org/wikipedia/commons/f/f8/Dcard_Favicon_x520.png" alt="dcard logo" class="lil-logo">&nbsp;Dcard</span>  專屬的宇宙打造者</h2>
         </div>
-       
 
         <div class="three">
             <h2 class="tac fwb primary">（以下講「深耕過、元素融合、寫劇本」的排版我需要再想一下，我也需要你的文字）</h2>
