--- a/script.html
+++ b/script.html
@@ -52,10 +52,11 @@
                 <li class="mb-15 d-flex jcsb aic">
                     <div class="person d-flex column aic">
                         <img src="img/dinu-2.png" alt="dinu" class="dinu">
+                        <h4 class="fz-s mt-2">中華電影製片協會第十四屆理事長</h4>
                         <h4 class="fz-s mt-2">執導作品《老莫的第二個春天》</h4>
                         <a href="https://zh.wikipedia.org/wiki/%E6%9D%8E%E7%A5%90%E5%AF%A7"><h3 class="fz-l fwb primary mt-2">李祐寧 導演</h3></a>
                     </div>
-                    <p class="content p-4 bg-third primary">《偷光》專業中充滿了感情，汶豪對作品有很深入的思考過，偷光的體裁＂人物張力、故事衝突＂兼容。使人一想就能想到。</p>
+                    <p class="content p-4 bg-third primary">《偷光》專業中充滿了感情，汶豪對作品有很深入的思考過，偷光的體裁「人物張力、故事衝突」兼容。使人一想就能想到。</p>
                 </li>
 
                 <li class="mb-15 d-flex jcsb row-reverse">
@@ -107,7 +108,7 @@
                         <h3 class="fz-l fwb primary mt-2">蕭以涵</h3>
                     </div>
                     <p class="content p-4 bg-third primary">汶豪在同儕間充分展示了他對於創作的熱愛。我在和他共事的過程中，發現他心思細膩，並且有著十足的行動力。<br>
-                        汶豪的創意無限，我想他未來在遊戲故事的創作上，對貴公司一定有很大的幫助。</p>
+                        汶豪的創意無限，我想他未來在角色故事的創作上，對貴公司一定有很大的幫助。</p>
                 </li>
             </ul>
         </div>
