--- a/script.html
+++ b/script.html
@@ -51,7 +51,7 @@
             <ul class="praise">
                 <li class="mb-15 d-flex jcsb aic">
                     <div class="person d-flex column aic">
-                        <img src="img/dinu-2.png" alt="dinu" class="dinu">
+                        <img src="img/man2.png" alt="人物像">
                         <h4 class="fz-s mt-2">中華電影製片協會第十四屆理事長</h4>
                         <h4 class="fz-s mt-2">執導作品《老莫的第二個春天》</h4>
                         <a href="https://zh.wikipedia.org/wiki/%E6%9D%8E%E7%A5%90%E5%AF%A7"><h3 class="fz-l fwb primary mt-2">李祐寧 導演</h3></a>
@@ -61,7 +61,7 @@
 
                 <li class="mb-15 d-flex jcsb row-reverse">
                     <div class="person d-flex column aic">
-                        <img src="img/saugy-2.png" alt="saugy" class="saugy">
+                        <img src="img/man1.png" alt="人物像">
                         <h4 class="fz-s mt-2">《電影學學電影MOVIExLEARN》</h4>
                         <h4 class="fz-s">Youtube 頻道主</h4>
                         <h4 class="fz-s mt-1">目前正籌備 - TSFF 台灣永續影展</h4>
@@ -78,7 +78,7 @@
 
                 <li class="mb-15 d-flex jcsb">
                     <div class="person d-flex column aic">
-                        <img src="img/zolly-2.png" alt="zolly" class="zolly">
+                        <img src="img/woman2.png" alt="人物像">
                         <h4 class="fz-s mt-2">曾任 輔仁大學影像創作社 社長</h4>
                         <h3 class="fz-l fwb primary mt-2">陳嘉蔚</h3>
                     </div>
@@ -88,7 +88,7 @@
     
                 <li class="mb-15 d-flex jcsb row-reverse">
                     <div class="person d-flex column aic">
-                        <img src="img/lynn-2.png" alt="lynn" class="lynn">
+                        <img src="img/man3.png" alt="人物像">
                         <h4 class="fz-s mt-2">國立臺灣藝術大學</h4>
                         <h4 class="fz-s">影音創作與數位媒體產業碩士</h4>
                         <h3 class="fz-l fwb primary mt-2">邱輔宣</h3>
@@ -101,7 +101,7 @@
 
                 <li class="d-flex jcsb aic">
                     <div class="person d-flex column aic">
-                        <img src="img/hoya.png" alt="hoya" class="hoya">
+                        <img src="img/woman1.png" alt="人物像">
                         <h4 class="fz-s mt-2">北京清華大學新聞與傳播學院</h4>
                         <h4 class="fz-s">(2014 優秀畢業生)</h4>
                         <h4 class="fz-s mt-1">曾任《一百年很⻑嗎》執行導演</h4>
