--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         <img src="img/banner-2.jpg" alt="如果有天能夠比它們更有名該有多好？" class="sub-banner-img">
 
         <div class="bg-third">
-            <h2 class="a666 pcb-slogan fwb tac primary mb-20">目前的一些市場狀況</h2>
-            <div class="explain d-flex">
+            <h2 class="a666 fwb tac primary mb-20">目前的一些市場狀況</h2>
+            <div class="explain explain-pc d-flex">
                 <div class="row mb-5 d-flex aic">
                     <div class="content content-1 bg-white p-4 mr-5 d-flex aic">
                         <p class="fz-l primary">短影音及角色經濟市場，皆已步入成熟期，對於內容創作者來說，人口紅利趨盡</p>
@@ -79,21 +79,19 @@
                         <p class="fz-l primary ml-5">市場上泛娛樂性內容氾濫，產生內容同質性高的問題</p>
                     </div>
                 </div>
-
                 <div class="row d-flex aic jcsb content-img mb-5">
                     <div class="d-flex aife">
                         <img src="img/arrow-left.png" alt="arrow" class="arrow-left">
-                        <h3 class="dcard-blue ml-4 fwb">市場應對</h3>
+                        <h3 class="dcard-blue fz-xl ml-4 fwb">市場應對</h3>
                     </div>
                     <div class="d-flex aife">
-                        <h3 class="dcard-blue mr-4 fwb">創作者應對</h3>
+                        <h3 class="dcard-blue fz-xl mr-4 fwb">創作者應對</h3>
                         <img src="img/arrow-right.png" alt="arrow" class="arrow-right">
                     </div>
                 </div>
-
                 <div class="row d-flex aifs">
                     <div class="content content-2 bg-white p-4 mr-5 d-flex column aife">
-                        <p class="fz-l primary">為了有更多創作空間，以抖音為例：將時長限制從 15 秒拉長到 60 秒，後解放至 3 分鐘去做市場測試<br>另也提高科普類影音的時限至 5 分鐘<br>未來更有機會開放至 15 分鐘</p>
+                        <p class="fz-l primary">為了有更多創作空間，以抖音為例：將時長限制從 15 秒拉長到 60 秒，後解放至 3 分鐘去做市場測試<br>另也提高科普類影音的時限至 5 分鐘<br>未來更有機會開放 15 分鐘</p>
                         <img src="img/dinu-1.png" alt="dinu" class="dinu">
                     </div>
                     <div class="content content-3 bg-white p-4 d-flex column aife jcc">
@@ -102,11 +100,31 @@
                     </div>
                 </div>
             </div>
+
+            <!-- mob -->
+            <div class="explain explain-mob d-none d-flex">
+                <div class="row mb-20">
+                    <div class="content-mob d-flex column aic">
+                        <p class="fz-l primary bg-white p-4 mb-5">短影音及角色經濟市場，皆已步入成熟期，對於內容創作者來說，人口紅利趨盡</p>
+                        <img src="img/arrow-down.png" alt="arrow" class="arrow-down mb-5">
+                        <h3 class="dcard-blue fwb mb-5">市場應對</h3>
+                        <p class="fz-l primary bg-white p-4">為了有更多創作空間，以抖音為例：<br>將時長限制從 15 秒拉長到 60 秒，後解放至 3 分鐘去做市場測試，另也提高科普類影音的時限至 5 分鐘，未來更有機會開放 15 分鐘</p>
+                    </div>
+                </div>
+                <div class="row mb-20">
+                    <div class="content-mob d-flex column aic">
+                        <p class="fz-l primary bg-white p-4 mb-5">市場上泛娛樂性內容氾濫，產生內容同質性高的問題</p>
+                        <img src="img/arrow-down.png" alt="arrow" class="arrow-down mb-5">
+                        <h3 class="dcard-blue fwb mb-5">創作者應對</h3>
+                        <p class="fz-l primary bg-white p-4">許多短影音創作者，開始放棄單純的泛娛樂性內容，轉而專注於特定主題的內容創作</p>
+                    </div>
+                </div>
+            </div>
         </div>
         
         <div class="add">
             <div class="add-content">
-                <p class="fz-xl primary">未來的市場，必定是兼具短、中長度的影音，且各品牌在市場的定位，將會區隔的越來越精準</p>
+                <p class="fz-l primary tac">未來的市場，必定是兼具短、中長度的影音<br>且各品牌在市場的定位，將會區隔的越來越精準</p>
             </div>
             <div class="tape"></div>
         </div>
@@ -163,7 +181,7 @@
                         </ul>
                     </li>
                     <li class="mb-5"><span class="fwb black">語言&nbsp;<i class="fas fa-language"></i> - </span>國語、粵語、英語</li>
-                    <li class="mob-hobby mb-5"><span class="fwb black">嗜好&nbsp;<i class="fas fa-book-open"></i> - </span>腦科學、心理學、九型人格、電影、服飾、妝髮、唱歌</li>
+                    <li class="mob-hobby mb-5"><span class="fwb black">嗜好&nbsp;<i class="fas fa-book-open"></i> - </span>腦科學、心理學、九型人格、電影</li>
                     <li class="mb-5"><span class="fwb black">電話&nbsp;<i class="fas fa-phone-alt"></i> - </span><a href="tel:0928389160" class="d-inline-block primary">0928389160</a></li>
                     <li class="mb-5"><span class="fwb black">電郵&nbsp;<i class="fas fa-envelope-open"></i> - </span><a href="mailto:jeremiah.302916@gmail.com" class="d-inline-block primary">jeremiah.302916@gmail.com</a></li>
                     <li><span class="black">社群&nbsp;<i class="fas fa-address-book"></i> - </span><a href="https://line.me/ti/p/VagCNWpd8d"><i class="line fab fa-line ml-2 mr-5 primary" style="font-size: 45px;"></i></a><a href="https://www.facebook.com/jeremiah.chan.718"><i class="fb fab fa-facebook-square primary" style="font-size: 45px;"></i></a></li>
