--- a/index.html
+++ b/index.html
@@ -142,12 +142,12 @@
                 <li>
                     <div class="img-1"></div>
                     <h3 class="title-tape bg-primary p-4 tac white fwb fz-l">深耕過大學領域</h3>
-                    <p class="primary fz-m bg-third p-5">劇情要吸引人，就要懂得運用衝突。我有注意力缺乏的症狀，對於無聊的事物特別敏感。所以在創作中，擅長利用有趣的組合、找出衝突。利用這樣的技法，在中華電影製片協會，十多位編劇學員的提案中，拿下第一成為該年主筆。</p>
+                    <p class="primary fz-m bg-third p-5">深耕過大學，從而有很多元素去創作。從學歷上：雙主修、輔系、學程；到社團參加過：影創社、拉拉隊、柔道社、志工；系學會當過文書組長、曾是系上詩詞吟唱的總召，且因詩詞活動去對岸交流過，體驗過延畢，當然也為愛情困擾過。</p>
                 </li>
                 <li>
                     <div class="img-2"></div>
                     <h3 class="title-tape bg-primary p-4 tac white fwb fz-l">擅長組合有趣元素</h3>
-                    <p class="primary fz-m bg-third white p-5">情節要動人，不是寫出坎坷、別離。而是寫出真實。我兩個主修都是人文科系、且自己對於心理學、腦神經科學另有些涉略。這都有助我寫出活生生的「人」，從而使作品情感深刻。</p>
+                    <p class="primary fz-m bg-third white p-5">劇情要吸引人，就要懂得運用衝突。我有注意力缺乏的症狀，對於無聊的事物特別敏感。所以在創作中，擅長利用有趣的組合、找出衝突。利用這樣的技法，在中華電影製片協會，十多位編劇學員的提案中，拿下第一成為該年主筆。</p>
                 </li>
                 <li>
                     <div class="img-3"></div>
