--- a/experience.html
+++ b/experience.html
@@ -55,7 +55,7 @@
                         <div class="border-line mt-1"></div>
                         <h3 class="time fwb mt-1 mb-4">2017/05-09</h3>
                     </div>
-                    <p>面試由台大學生創立，為中小企業寫CSR報告書的團體。利用「衝突力」，面試時以大學苦戀的故事、結合大學的成長歷程。終成功在評審心中留下深刻印象，通過了錄取率只有10%的考驗。</p>
+                    <p>面試由台大學生創立，為中小企業寫CSR報告書的團體。面試時以大學苦戀的故事、結合大學的成長歷程。終成功在評審心中留下深刻印象，通過了錄取率只有10%的考驗。</p>
                 </div>
             </li>
             
@@ -79,7 +79,7 @@
                         <div class="border-line mt-1"></div>
                         <h3 class="time fwb mt-1 mb-4">2017/09-11</h3>
                     </div>
-                    <p>活動變成非強制性，因此報名人數大減、但活動卻是原來時長。利用「節奏力」重新規劃，新增了開幕影片、且每隊都有自己的出場影片、中間有觀眾大合唱。終收到70多張回饋單，當中好評如潮。</p>
+                    <p>活動變成非強制性，因此報名人數大減、但活動卻是原來時長。重新規劃節奏，新增了開幕影片、且每隊都有自己的出場影片、中間有觀眾大合唱。終收到70多張回饋單，當中好評如潮。</p>
                 </div>
             </li>
 
