--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         
         <div class="add">
             <div class="add-content">
-                <p class="fz-l primary tac">未來的市場，必定是兼具短、中長度的影音<br>且各品牌在市場的定位，將會區隔的越來越精準</p>
+                <p class="fz-l primary tac">為應對短影音的生態及未來的市場，影音的發展必定是短長兼具<br>且各品牌在市場的定位，將會區隔的越來越精準</p>
             </div>
             <div class="tape"></div>
         </div>
@@ -142,7 +142,7 @@
                 <li>
                     <div class="img-1"></div>
                     <h3 class="title-tape bg-primary p-4 tac white fwb fz-l">深耕過大學領域</h3>
-                    <p class="primary fz-m bg-third p-5">深耕過大學，從而有很多元素去創作。從學歷上：雙主修、輔系、學程；到社團參加過：影創社、拉拉隊、柔道社、志工；系學會當過文書組長、曾是系上詩詞吟唱的總召，且因詩詞活動去對岸交流過，體驗過延畢，當然也為愛情困擾過。</p>
+                    <p class="primary fz-m bg-third p-5">深耕過大學，從而有很多元素去創作。從學歷上：雙主修、輔系、學程；到社團參加過：影創社、拉拉隊、柔道社、志工；系學會當過文書組長、曾是系上詩詞吟唱的總召，且因詩詞活動去對岸交流過，體驗過延畢，也為愛情困擾過。</p>
                 </li>
                 <li>
                     <div class="img-2"></div>
@@ -152,7 +152,7 @@
                 <li>
                     <div class="img-3"></div>
                     <h3 class="title-tape bg-primary p-4 tac white fwb fz-l">編劇經驗豐富</h3>
-                    <p class="primary fz-m bg-third p-5">電影跟音樂之所以迷人，是因為有時間限制。每分鐘都十分珍貴，所以更要合理安排節奏。作為數年的電影學習者，對節奏的掌握已是條件反射。相信把它融合到遊戲之中，會使得作品更緊湊、讓人更沈迷。</p>
+                    <p class="primary fz-m bg-third p-5">對編劇理解透徹，才能在不同類型、長度中切換自如。我在4年的編劇經驗中，創作了多達10部的作品，涵蓋了：舞台劇、短片、電影劇本。參加過4次編劇公開課。另外多次奪得組隊比賽、小組作業或活動中編劇的位置。</p>
                 </li>
             </ul>
         </div>
