--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                         </ul>
                     </li>
                     <li class="mb-5"><span class="fwb black">語言&nbsp;<i class="fas fa-language"></i> - </span>國語、粵語、英語</li>
-                    <li class="mob-hobby mb-5"><span class="fwb black">嗜好&nbsp;<i class="fas fa-book-open"></i> - </span>腦科學、心理學、九型人格、電影</li>
+                    <li class="mob-hobby mb-5"><span class="fwb black">嗜好&nbsp;<i class="fas fa-book-open"></i> - </span>腦科學、心理學、九型人格、電影、閱讀</li>
                     <li class="mb-5"><span class="fwb black">電話&nbsp;<i class="fas fa-phone-alt"></i> - </span><a href="tel:0928389160" class="d-inline-block primary">0928389160</a></li>
                     <li class="mb-5"><span class="fwb black">電郵&nbsp;<i class="fas fa-envelope-open"></i> - </span><a href="mailto:jeremiah.302916@gmail.com" class="d-inline-block primary">jeremiah.302916@gmail.com</a></li>
                     <li><span class="black">社群&nbsp;<i class="fas fa-address-book"></i> - </span><a href="https://line.me/ti/p/VagCNWpd8d"><i class="line fab fa-line ml-2 mr-5 primary" style="font-size: 45px;"></i></a><a href="https://www.facebook.com/jeremiah.chan.718"><i class="fb fab fa-facebook-square primary" style="font-size: 45px;"></i></a></li>
