--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
         <div class="add">
             <div class="add-content">
-                <p class="fz-l primary tac">為應對短影音的生態及未來的市場，影音的發展必定是短長兼具<br>且各品牌在市場的定位，將會區隔得越來越精準</p>
+                <p class="fz-l primary tac">為應對短影音的生態及未來的市場，影音的發展必定是短長兼具，<br>且各品牌在市場的定位，將會區隔得越來越精準</p>
             </div>
             <div class="tape"></div>
         </div>
